--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -23,8 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "redis": "^4.6.10",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.11.0",
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "jest": "^29.7.0",
